# app/Http/Controllers/Controller.php
@@ -12,7 +12,15 @@ use Illuminate\Routing\Controller as BaseController;
  *    title="Gojo API Documentation",
  *    version="1.0.0",
  * )
- */
+ * @OA\SecurityScheme(
+ *   securityScheme="bearerAuth",
+ *   in="header",
+ *   name="bearerAuth",
+ *   type="http",
+ *   scheme="bearer",
+ *   bearerFormat="JWT",
+ * ),
+*/
 
 class Controller extends BaseController
 {
